<resources>
    <string name="app_name">ChatBuddy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">SIGNUP</string>
    <string name="already_have_account">Already have an account? "</string>
    <string name="login_now">Login Now</string>
    <string name="login">LOGIN</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="sign_up_now">Create new now!</string>
</resources>