<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".modules.registration.SignUpFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- TODO: Update blank fragment layout -->

        <TextView
            android:id="@+id/textView2"
            style="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/senbold"
            android:text="@string/app_name"
            android:textColor="@color/color_primary"
            android:textSize="@dimen/_20sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText

            android:id="@+id/et_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_horizontal"
            android:layout_marginBottom="@dimen/_15sdp"
            android:background="@drawable/custum_edit_text"
            android:fontFamily="@font/sen_regular"
            android:hint="@string/username"
            android:padding="@dimen/_10sdp"

            android:singleLine="true"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintBottom_toTopOf="@+id/et_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText

            android:id="@+id/et_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_horizontal"
            android:layout_marginBottom="@dimen/_15sdp"
            android:background="@drawable/custum_edit_text"
            android:fontFamily="@font/sen_regular"
            android:hint="@string/email"
            android:padding="@dimen/_10sdp"
            android:singleLine="true"
            android:textSize="@dimen/_12ssp"

            app:layout_constraintBottom_toTopOf="@+id/et_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <EditText

            android:id="@+id/et_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_horizontal"

            android:background="@drawable/custum_edit_text"
            android:fontFamily="@font/sen_regular"
            android:hint="@string/password"
            android:padding="@dimen/_10sdp"
            android:singleLine="true"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView2" />


        <EditText

            android:id="@+id/et_confirm_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_horizontal"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/custum_edit_text"
            android:fontFamily="@font/sen_regular"
            android:hint="@string/confirm_password"
            android:padding="@dimen/_10sdp"
            android:singleLine="true"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_password" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_signUp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_horizontal"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/sen_regular"
            android:padding="@dimen/_12sdp"
            android:text="@string/sign_up"
            android:textSize="@dimen/_12ssp"
            app:backgroundTint="@color/color_primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_confirm_password" />


        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:alpha=".7"
            android:fontFamily="@font/sen_regular"
            android:text="@string/already_have_account"
            android:textColor="#000000"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintEnd_toStartOf="@+id/tv_login"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bt_signUp" />


        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha=".8"
            android:fontFamily="@font/sen_regular"
            android:text="@string/login_now"
            android:textColor="@color/color_primary"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintBottom_toBottomOf="@+id/textView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toTopOf="@+id/textView4" />


    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>